Ejercicio 1 En una Librería de Blueprint en C++ crear una función que liste todos los assets del proyecto que tienen dependencias siguiendo este formato:  AssetRoot [ROOT]  |- Dependency  |- Dependency   |- SubDependency

--- a/UTHUB_Blutility.uproject
+++ b/UTHUB_Blutility.uproject
@@ -17,6 +17,13 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "Tarea2Plugin",
+			"Enabled": true,
+			"TargetAllowList": [
+				"Editor"
+			]
 		}
 	]
 }
